new train notebook and presentation

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -46,7 +46,7 @@
     "        outputs = text_encoder(**inputs)\n",
     "\n",
     "    # Extract the last hidden state\n",
-    "    last_hidden_state = outputs.last_hidden_state\n",
+    "    last_hidden_state = outputs[0]\n",
     "\n",
     "    return last_hidden_state\n"
    ]
@@ -115,7 +115,7 @@
     ")\n",
     "model = model.to(device)\n",
     "\n",
-    "model.load_state_dict(torch.load('unet_new (18).pth', weights_only=True))\n",
+    "model.load_state_dict(torch.load('unet_new.pth', weights_only=True))\n",
     "model.eval()\n",
     "print('model loaded')"
    ]
@@ -126,34 +126,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sample_image_generation(model, vae, text,num_inference_steps,num_samples=1):\n",
+    "def sample_image_generation(model, vae, text, num_inference_steps, num_samples=1, guidance_scale=10):\n",
     "    noise_scheduler = DDPMScheduler(num_train_timesteps=1000)\n",
     "    noise_scheduler.set_timesteps(num_inference_steps=num_inference_steps)\n",
     "    model.eval()\n",
     "    images_list = []\n",
     "    with torch.no_grad():\n",
+    "        # Get text embeddings (conditional)\n",
     "        text_embeddings = get_text_embeddings(text)\n",
+    "        \n",
+    "        # Create unconditional embeddings (empty/neutral prompt)\n",
+    "        unconditional_text_embeddings = torch.zeros_like(text_embeddings).to(device)\n",
+    "        \n",
     "        for i in range(num_samples):\n",
     "            noise = torch.randn(1, 4, 32, 32).to(device)\n",
     "\n",
     "            for t in tqdm(noise_scheduler.timesteps, position=0, leave=True):\n",
-    "                noise_pred = model(noise, t, text_embeddings).sample\n",
+    "                # Conditional prediction (with text)\n",
+    "                noise_pred_cond = model(noise, t, text_embeddings).sample\n",
+    "                \n",
+    "                # Unconditional prediction (no text)\n",
+    "                noise_pred_uncond = model(noise, t, unconditional_text_embeddings).sample\n",
+    "                \n",
+    "                # Classifier-Free Guidance: Combine both predictions\n",
+    "                noise_pred = noise_pred_uncond + guidance_scale * (noise_pred_cond - noise_pred_uncond)\n",
+    "                \n",
+    "                # Perform one step in the noise scheduler\n",
     "                noise = noise_scheduler.step(noise_pred, t, noise).prev_sample\n",
     "\n",
     "            # Decode the noise to generate images\n",
     "            noise = noise / 0.18215  # Undo the latent scaling\n",
     "            images = vae.decode(noise).sample\n",
-    "            images = vae(images).sample\n",
-    "            \n",
     "            # images = vae(images).sample\n",
+    "            \n",
+    "            # Convert the image to numpy format for visualization\n",
     "            img = images.squeeze().cpu().permute(1, 2, 0).numpy()\n",
-    "            img = (img + 1) / 2 \n",
-    "            images_list.append((img*255).astype('uint8'))\n",
-    "    # compines images by nxm in one image\n",
-    "    # row1 = np.concatenate(images_list[:2],axis=0)\n",
-    "    # row2 = np.concatenate(images_list[2:],axis=0)\n",
-    "    # final_image = np.concatenate([row1,row2],axis=1)\n",
-    "    return images_list[0]"
+    "            img = (img + 1) / 2  # Normalize to [0, 1]\n",
+    "            images_list.append((img * 255).astype('uint8'))  # Scale to [0, 255] for visualization\n",
+    "            \n",
+    "    return cv2.resize(images_list[0],(320,320))\n"
    ]
   },
   {
@@ -165,24 +176,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:01<00:00,  9.26it/s]\n"
+      "100%|██████████| 10/10 [00:01<00:00,  5.01it/s]\n"
      ]
     }
    ],
    "source": [
-    "img = sample_image_generation(model,vae,\"girl\",10)"
+    "img = sample_image_generation(model,vae,\"this teen girl\",10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7868\n",
+      "Running on local URL:  http://127.0.0.1:7860\n",
       "IMPORTANT: You are using gradio version 3.50.0, however version 4.44.1 is available, please upgrade.\n",
       "--------\n",
       "\n",
@@ -192,7 +203,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7868/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -205,7 +216,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -213,7 +224,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [00:01<00:00,  8.97it/s]\n"
+      "100%|██████████| 11/11 [00:02<00:00,  4.24it/s]\n",
+      "100%|██████████| 11/11 [00:01<00:00,  5.55it/s]\n",
+      "100%|██████████| 25/25 [00:04<00:00,  5.92it/s]\n",
+      "100%|██████████| 25/25 [00:03<00:00,  6.30it/s]\n",
+      "100%|██████████| 40/40 [00:07<00:00,  5.47it/s]\n",
+      "100%|██████████| 40/40 [00:06<00:00,  6.28it/s]\n",
+      "100%|██████████| 11/11 [00:01<00:00,  6.36it/s]\n",
+      "100%|██████████| 11/11 [00:01<00:00,  6.14it/s]\n",
+      "100%|██████████| 11/11 [00:01<00:00,  6.53it/s]\n",
+      "100%|██████████| 14/14 [00:02<00:00,  5.82it/s]\n",
+      "100%|██████████| 14/14 [00:02<00:00,  6.01it/s]\n",
+      "100%|██████████| 14/14 [00:02<00:00,  6.19it/s]\n",
+      "100%|██████████| 14/14 [00:02<00:00,  6.32it/s]\n",
+      "100%|██████████| 14/14 [00:02<00:00,  6.01it/s]\n",
+      "100%|██████████| 14/14 [00:02<00:00,  5.61it/s]\n",
+      "100%|██████████| 14/14 [00:02<00:00,  5.47it/s]\n",
+      "100%|██████████| 14/14 [00:02<00:00,  5.83it/s]\n",
+      "100%|██████████| 14/14 [00:02<00:00,  5.96it/s]\n",
+      "100%|██████████| 14/14 [00:02<00:00,  6.21it/s]\n",
+      "100%|██████████| 25/25 [00:03<00:00,  6.45it/s]\n",
+      "100%|██████████| 25/25 [00:04<00:00,  6.21it/s]\n"
      ]
     }
    ],
