new train notebook and presentation

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -14,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\m7mde\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\huggingface_hub\\file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import CLIPTextModel, CLIPTokenizer\n",
     "import torch\n",
@@ -60,7 +51,9 @@
     "from diffusers import AutoencoderKL\n",
     "\n",
     "# Load a pretrained VAE\n",
+    "# vae = AutoencoderKL.from_pretrained(\"CompVis/stable-diffusion-v1-4\", subfolder=\"vae\").to(device)\n",
     "vae = AutoencoderKL.from_pretrained(\"stabilityai/sd-vae-ft-mse\").to(device)\n",
+    "# vae.load_state_dict(torch.load('/kaggle/working/vae_step.pth', weights_only=True))\n",
     "vae.eval()  # Set the VAE in evaluation mode\n",
     "\n",
     "def get_image_latent_dist(image):\n",
@@ -71,25 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\m7mde\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\_utils.py:831: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
-      "  return self.fget.__get__(instance, owner)()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = UNet2DConditionModel(\n",
     "    sample_size=32,\n",
@@ -159,99 +136,17 @@
     "            \n",
     "            # Convert the image to numpy format for visualization\n",
     "            img = images.squeeze().cpu().permute(1, 2, 0).numpy()\n",
-<<<<<<< HEAD
     "            img = (img + 1) / 2  # Normalize to [0, 1]\n",
     "            images_list.append((img * 255).astype('uint8'))  # Scale to [0, 255] for visualization\n",
     "            \n",
     "    return cv2.resize(images_list[0],(320,320))\n"
-=======
-    "            img = (img + 1) / 2 \n",
-    "            images_list.append((img*255).astype('uint8'))\n",
-    "    return images_list[0]"
->>>>>>> 87536c0a80461b2d81cce7ae3dbc18217695b15b
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:01<00:00,  5.01it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "img = sample_image_generation(model,vae,\"this teen girl\",10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running on local URL:  http://127.0.0.1:7860\n",
-      "IMPORTANT: You are using gradio version 3.50.0, however version 4.44.1 is available, please upgrade.\n",
-      "--------\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 11/11 [00:02<00:00,  4.24it/s]\n",
-      "100%|██████████| 11/11 [00:01<00:00,  5.55it/s]\n",
-      "100%|██████████| 25/25 [00:04<00:00,  5.92it/s]\n",
-      "100%|██████████| 25/25 [00:03<00:00,  6.30it/s]\n",
-      "100%|██████████| 40/40 [00:07<00:00,  5.47it/s]\n",
-      "100%|██████████| 40/40 [00:06<00:00,  6.28it/s]\n",
-      "100%|██████████| 11/11 [00:01<00:00,  6.36it/s]\n",
-      "100%|██████████| 11/11 [00:01<00:00,  6.14it/s]\n",
-      "100%|██████████| 11/11 [00:01<00:00,  6.53it/s]\n",
-      "100%|██████████| 14/14 [00:02<00:00,  5.82it/s]\n",
-      "100%|██████████| 14/14 [00:02<00:00,  6.01it/s]\n",
-      "100%|██████████| 14/14 [00:02<00:00,  6.19it/s]\n",
-      "100%|██████████| 14/14 [00:02<00:00,  6.32it/s]\n",
-      "100%|██████████| 14/14 [00:02<00:00,  6.01it/s]\n",
-      "100%|██████████| 14/14 [00:02<00:00,  5.61it/s]\n",
-      "100%|██████████| 14/14 [00:02<00:00,  5.47it/s]\n",
-      "100%|██████████| 14/14 [00:02<00:00,  5.83it/s]\n",
-      "100%|██████████| 14/14 [00:02<00:00,  5.96it/s]\n",
-      "100%|██████████| 14/14 [00:02<00:00,  6.21it/s]\n",
-      "100%|██████████| 25/25 [00:03<00:00,  6.45it/s]\n",
-      "100%|██████████| 25/25 [00:04<00:00,  6.21it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gradio as gr\n",
     "\n",
